Jolie launcher code restyling

--- a/jolie1.10/Dockerfile
+++ b/jolie1.10/Dockerfile
@@ -19,7 +19,8 @@ FROM python:3.7-alpine
 RUN mkdir -p /proxy/bin /proxy/lib /proxy/action
 WORKDIR /proxy
 COPY --from=builder bin/proxy /bin/proxy
-ADD lib/launcher.py /proxy/lib/launcher.py
+ADD lib/launcher.ol /proxy/lib/launcher.ol
+ADD lib/OW_ActionInterface.iol /proxy/lib/OW_ActionInterface.iol
 ADD bin/compile /proxy/bin/compile
 ENV OW_COMPILER=/proxy/bin/compile
 ENTRYPOINT ["/bin/proxy"]
