Updated dockerfile and refinement

--- a/jolie1.10/Dockerfile
+++ b/jolie1.10/Dockerfile
@@ -15,12 +15,13 @@
 # limitations under the License.
 #
 FROM openwhisk/actionloop-v2:latest as builder
-FROM python:3.7-alpine
+FROM jolielang/jolie:edge
 RUN mkdir -p /proxy/bin /proxy/lib /proxy/action
 WORKDIR /proxy
 COPY --from=builder bin/proxy /bin/proxy
 ADD lib/launcher.ol /proxy/lib/launcher.ol
-ADD lib/OW_ActionInterface.iol /proxy/lib/OW_ActionInterface.iol
+ADD lib/owactioninterface.ol /proxy/lib/owactioninterface.ol
 ADD bin/compile /proxy/bin/compile
+RUN apk update && apk add python3
 ENV OW_COMPILER=/proxy/bin/compile
 ENTRYPOINT ["/bin/proxy"]
